src/objects/IPM_MarketPerformance__c.object
<CustomObject>
    <fields>
        <fullName>AggregateAverageRetailPrice__c</fullName>
        <label>Aggregate Average Retail Price</label>
        <summarizedField>IPM_MarketPerformanceBreakdown__c.AverageRetailPrice__c</summarizedField>
        <summaryForeignKey>IPM_MarketPerformanceBreakdown__c.MarketPerformance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AggregateGM__c</fullName>
        <label>Aggregate GM%</label>
        <summarizedField>IPM_MarketPerformanceBreakdown__c.GM__c</summarizedField>
        <summaryForeignKey>IPM_MarketPerformanceBreakdown__c.MarketPerformance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AggregateGrossAP__c</fullName>
        <label>Aggregate Gross BMI</label>
        <summarizedField>IPM_MarketPerformanceBreakdown__c.Gross_AP__c</summarizedField>
        <summaryForeignKey>IPM_MarketPerformanceBreakdown__c.MarketPerformance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AggregateGrossPBO__c</fullName>
        <label>Aggregate Gross PBI</label>
        <summarizedField>IPM_MarketPerformanceBreakdown__c.GrossPBO__c</summarizedField>
        <summaryForeignKey>IPM_MarketPerformanceBreakdown__c.MarketPerformance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AggregateGrossTurnover__c</fullName>
        <label>Aggregate Gross Turnover</label>
        <summarizedField>IPM_MarketPerformanceBreakdown__c.GrossTurnover__c</summarizedField>
        <summaryForeignKey>IPM_MarketPerformanceBreakdown__c.MarketPerformance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AggregateInnovationValueShare__c</fullName>
        <label>Aggregate Innovation Value Share (%)</label>
        <summarizedField>IPM_MarketPerformanceBreakdown__c.InnovationValueShare__c</summarizedField>
        <summaryForeignKey>IPM_MarketPerformanceBreakdown__c.MarketPerformance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AggregateInnovationVolumeShare__c</fullName>
        <label>Aggregate Innovation Volume Share (%)</label>
        <summarizedField>IPM_MarketPerformanceBreakdown__c.InnovationVolumeShare__c</summarizedField>
        <summaryForeignKey>IPM_MarketPerformanceBreakdown__c.MarketPerformance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AggregateMediaSpend__c</fullName>
        <label>Aggregate Media Spend (dedicated)</label>
        <summarizedField>IPM_MarketPerformanceBreakdown__c.MediaSpend__c</summarizedField>
        <summaryForeignKey>IPM_MarketPerformanceBreakdown__c.MarketPerformance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AggregatePenetrationcum__c</fullName>
        <label>Aggregate Penetration (cum) (%)</label>
        <summarizedField>IPM_MarketPerformanceBreakdown__c.Penetrationcum__c</summarizedField>
        <summaryForeignKey>IPM_MarketPerformanceBreakdown__c.MarketPerformance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AggregateRelativePricetoMarket__c</fullName>
        <label>Aggregate Relative Price to Market (API)</label>
        <summarizedField>IPM_MarketPerformanceBreakdown__c.RelativePricetoMarket__c</summarizedField>
        <summaryForeignKey>IPM_MarketPerformanceBreakdown__c.MarketPerformance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AggregateRepeatRate__c</fullName>
        <label>Aggregate Repeat Rate</label>
        <summarizedField>IPM_MarketPerformanceBreakdown__c.RepeatRate__c</summarizedField>
        <summaryForeignKey>IPM_MarketPerformanceBreakdown__c.MarketPerformance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AggregateWeightedDistribution__c</fullName>
        <label>Aggregate Weighted Distribution (%)</label>
        <summarizedField>IPM_MarketPerformanceBreakdown__c.WeightedDistribution__c</summarizedField>
        <summaryForeignKey>IPM_MarketPerformanceBreakdown__c.MarketPerformance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AverageRetailPrice__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Average Retail Price (€)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GM__c</fullName>
        <formula>IPMFinancialYear__r.GM_of_TO_Regional__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GM% (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GrossPBO__c</fullName>
        <formula>IPMFinancialYear__r.Profit_Before_Overheads_Regional__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross PBI (€)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossTurnover__c</fullName>
        <formula>IPMFinancialYear__r.Turnover_Regional__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Turnover (€)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_AP__c</fullName>
        <formula>IPMFinancialYear__r.Advertising_Promotions_Regional__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross BMI (€)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPMFinancialYear__c</fullName>
        <label>IPM Financial Year</label>
        <referenceTo>IPM_Financial_Year__c</referenceTo>
        <relationshipLabel>IPM Market Performance</relationshipLabel>
        <relationshipName>IPM_FinancialYear</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IPMGateDocumentSection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IPM Gate Document Section</label>
        <referenceTo>IPM_Project_Document_Section__c</referenceTo>
        <relationshipLabel>IPM Market Performance</relationshipLabel>
        <relationshipName>IPM_GateDocSection</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPMProjectRollout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IPM Project Rollout</label>
        <referenceTo>IPM_Project_Rollout__c</referenceTo>
        <relationshipName>IPM_AssociatedRollout</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_GM__c</fullName>
        <description>get BB financial GM value</description>
        <formula>IPMFinancialYear__r.GM_of_TO_Local__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GM% (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IPM_Gross_BMI__c</fullName>
        <description>get BB advertising promotion value</description>
        <formula>IPMFinancialYear__r.Advertising_Promotions_Local__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross BMI (€)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPM_Gross_PBI__c</fullName>
        <description>Local Profit Before Overheads</description>
        <formula>IPMFinancialYear__r.Profit_Before_Overheads_Local__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross PBI (€)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPM_Gross_Turnover__c</fullName>
        <description>local project turnover</description>
        <formula>IPMFinancialYear__r.Turnover_Local__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Turnover (€)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InnovationValueShare__c</fullName>
        <formula>IPMFinancialYear__r.Value_Market_Share_Regional__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Innovation Value Share (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>InnovationVolumeShare__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Innovation Volume Share (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MCO_Name__c</fullName>
        <formula>IPMProjectRollout__r.MCO_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MCO Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MediaSpend__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Media Spend (dedicated) (€)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Penetrationcum__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Penetration (cum) (%)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RelativePricetoMarket__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Relative Price to Market (API) (%)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RepeatRate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Repeat Rate (cum) (%)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RolloutNameWithMCOName__c</fullName>
        <formula>IPMProjectRollout__r.IPM_Rollout_Project__c  &amp; &apos; (&apos; &amp;  IPMProjectRollout__r.MCO_Name__c &amp; &apos;)&apos;</formula>
        <label>Rollout Name with MCO Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetLaunchDate__c</fullName>
        <formula>IPMFinancialYear__r.Target_Launch_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WeightedDistribution__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Weighted Distribution (%)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>IPM Market Performance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>IPM GDSection6.3 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IPM Market Performance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>